@@ -32,8 +32,3 @@ wdm.geckoDriverUrl=https://api.github.com/repos/mozilla/geckodriver/releases
 wdm.geckoDriverTaobaoUrl=http://npm.taobao.org/mirrors/geckodriver
 wdm.geckoDriverExport=webdriver.gecko.driver
 wdm.geckoDriverVersion=LATEST
-
-wdm.gitHubTokenName=
-wdm.gitHubTokenSecret=
-
-wdm.architecture=
